SPPU_TE_MLPracticals

--- a/Associate_rule_mining/Apriori_Algorithm_order1.ipynb
+++ b/Associate_rule_mining/Apriori_Algorithm_order1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "aaed3cc7",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
     "# If your dataset uses different names, tell me.\n",
     "\n",
     "# Group items by Order_ID\n",
-    "transactions = df.groupby(\"Order_ID\")[\"Item\"].apply(list).values.tolist()\n",
+    "transactions = df.groupby(\"Member_number\")[\"itemDescription\"].apply(list).values.tolist()\n",
     "\n",
     "# -----------------------------\n",
     "# b) Generate list of transactions\n",
@@ -68,7 +68,14 @@
     "# -----------------------------\n",
     "\n",
     "print(\"\\nTop 10 Rules:\")\n",
-    "print(rules.sort_values(\"lift\", ascending=False).head(10))\n"
+    "print(rules.sort_values(\"lift\", ascending=False).head(10))\n",
+    "plt.figure(figsize=(8, 5))\n",
+    "plt.scatter(rules['support'], rules['confidence'], alpha=0.7, c=rules['lift'], cmap='viridis')\n",
+    "plt.colorbar(label='Lift')\n",
+    "plt.title(\"Apriori - Market Basket Analysis (Grocery Data)\")\n",
+    "plt.xlabel(\"Support\")\n",
+    "plt.ylabel(\"Confidence\")\n",
+    "plt.show()"
    ]
   },
   {
